optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_transform_event_names_without_jsx_transpile.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import mongo from 'mongodb';

export const Greeter = component$(() => {
	// Double count watch
	useTask$(async () => {
		await mongo.users();
	});
	return (
		<div>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
		</div>
	)
});

============================= should_transform_event_names_without_jsx_transpile.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Greeter_component_useTask_0b2K1gpiTXw = () => import("./should_transform_event_names_without_jsx_transpile.tsx_Greeter_component_useTask_0b2K1gpiTXw.js");
const i_Greeter_component_div_div_onClick_1 = () => import("./should_transform_event_names_without_jsx_transpile.tsx.js");
const i_Greeter_component_div_div_onClick_2 = () => import("./should_transform_event_names_without_jsx_transpile.tsx.js");
const i_Greeter_component_OWaBZxmH0c0 = () => import("./should_transform_event_names_without_jsx_transpile.tsx_Greeter_component_OWaBZxmH0c0.js");
export const Greeter = componentQrl(qrl(i_Greeter_component_OWaBZxmH0c0, "Greeter_component_OWaBZxmH0c0"));


None
============================= ./should_transform_event_names_without_jsx_transpile.tsx_Greeter_component_useTask_0b2K1gpiTXw.js (ENTRY POINT)==

import mongo from "mongodb";
export const Greeter_component_useTask_0b2K1gpiTXw = async () => {
	await mongo.users();
};


None
/*
{
  "origin": "should_transform_event_names_without_jsx_transpile.tsx",
  "name": "Greeter_component_useTask_0b2K1gpiTXw",
  "entry": null,
  "displayName": "should_transform_event_names_without_jsx_transpile.tsx_Greeter_component_useTask",
  "hash": "0b2K1gpiTXw",
  "canonicalFilename": "should_transform_event_names_without_jsx_transpile.tsx_Greeter_component_useTask_0b2K1gpiTXw",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Greeter_component_useTask_0b2K1gpiTXw",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./should_transform_event_names_without_jsx_transpile.tsx_Greeter_component_OWaBZxmH0c0.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Greeter_component_OWaBZxmH0c0 = () => {
	useTaskQrl(qrl(i_Greeter_component_useTask_0b2K1gpiTXw, "Greeter_component_useTask_0b2K1gpiTXw"));
	return <div>
			<div on:click={useTaskQrl(qrl(i_Greeter_component_useTask_0b2K1gpiTXw, "Greeter_component_useTask_0b2K1gpiTXw"))} />
			<div on:click={qrl(i_Greeter_component_div_div_onClick_1, "Greeter_component_div_div_onClick_1")} />
			<div on:click={qrl(i_Greeter_component_div_div_onClick_2, "Greeter_component_div_div_onClick_2")} />
		</div>;
};


None
/*
{
  "origin": "should_transform_event_names_without_jsx_transpile.tsx",
  "name": "Greeter_component_OWaBZxmH0c0",
  "entry": null,
  "displayName": "should_transform_event_names_without_jsx_transpile.tsx_Greeter_component",
  "hash": "OWaBZxmH0c0",
  "canonicalFilename": "should_transform_event_names_without_jsx_transpile.tsx_Greeter_component_OWaBZxmH0c0",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Greeter_component_OWaBZxmH0c0",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
