optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_transform_nested_loops.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---


import { component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(function() {
  const data = useSignal<Signal<any>[]>([]);
  const data2 = useSignal<Signal<any>[]>([]);
  return <div>
	{data.value.map(row => (
	  <div onClick$={() => console.log(row.value.id)}>
		{data2.value.map(item => (
		  <p onClick$={() => console.log(row.value.id, item.value.id)}>{row.value.id}-{item.value.id}</p>
		))}
	  </div>
	))}
  </div>;
})

============================= test.tsx_Foo_component_div_div_p_on_click_FWFSo0km4Aw.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Foo_component_div_div_p_on_click_FWFSo0km4Aw = (_, _1, item)=>{
    const [row] = useLexicalScope();
    return console.log(row.value.id, item.value.id);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";4DASiB,QADE;;WACI,QAAQ,GAAG,CAAC,IAAI,KAAK,CAAC,EAAE,EAAE,KAAK,KAAK,CAAC,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_p_on_click_FWFSo0km4Aw",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_p_on_click",
  "hash": "FWFSo0km4Aw",
  "canonicalFilename": "test.tsx_Foo_component_div_div_p_on_click_FWFSo0km4Aw",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    332,
    378
  ],
  "paramNames": [
    "_",
    "_",
    "item"
  ],
  "captureNames": [
    "row"
  ]
}
*/
============================= test.tsx_Foo_component_div_div_on_click_1u04rzUKERk.js (ENTRY POINT)==

export const Foo_component_div_div_on_click_1u04rzUKERk = (_, _1, row)=>console.log(row.value.id);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"0DAOkB,QADD,MACO,QAAQ,GAAG,CAAC,IAAI,KAAK,CAAC,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_on_click_1u04rzUKERk",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_on_click",
  "hash": "1u04rzUKERk",
  "canonicalFilename": "test.tsx_Foo_component_div_div_on_click_1u04rzUKERk",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    252,
    283
  ],
  "paramNames": [
    "_",
    "_",
    "row"
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;cAEY\"}")
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0)=>p0.value.id;
const _hf0_str = "p0.value.id";
const i_1u04rzUKERk = ()=>import("./test.tsx_Foo_component_div_div_on_click_1u04rzUKERk");
const i_FWFSo0km4Aw = ()=>import("./test.tsx_Foo_component_div_div_p_on_click_FWFSo0km4Aw");
export const Foo_component_HTDRsvUbLiE = function() {
    const data = useSignal([]);
    const data2 = useSignal([]);
    const Foo_component_div_div_on_click_1u04rzUKERk = /*#__PURE__*/ qrl(i_1u04rzUKERk, "Foo_component_div_div_on_click_1u04rzUKERk");
    const Foo_component_div_div_p_on_click_FWFSo0km4Aw = /*#__PURE__*/ qrl(i_FWFSo0km4Aw, "Foo_component_div_div_p_on_click_FWFSo0km4Aw", [
        row
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row)=>/*#__PURE__*/ _jsxSorted("div", {
            "on:click": Foo_component_div_div_on_click_1u04rzUKERk,
            "q:p": row
        }, null, data2.value.map((item)=>/*#__PURE__*/ _jsxSorted("p", {
                "on:click": Foo_component_div_div_p_on_click_FWFSo0km4Aw,
                "q:p": item
            }, null, [
                _fnSignal(_hf0, [
                    row
                ], _hf0_str),
                "-",
                _fnSignal(_hf0, [
                    item
                ], _hf0_str)
            ], 0, "u6_0")), 0, "u6_1")), 1, "u6_2");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;mBASkE,GAAI,KAAK,CAAC,EAAE;;;;yCAPvD;IACrB,MAAM,OAAO,UAAyB,EAAE;IACxC,MAAM,QAAQ,UAAyB,EAAE;;;;;IACzC,qBAAO,WAAC,mBACR,KAAK,KAAK,CAAC,GAAG,CAAC,CAAA,oBACd,WAAC;YAAI,UAAQ;mBADC;iBAEd,MAAM,KAAK,CAAC,GAAG,CAAC,CAAA,qBACf,WAAC;gBAAE,UAAQ;uBADI;;;;;gBAC4D;;;;;AAK/E\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    447
  ]
}
*/
== DIAGNOSTICS ==

[]
