optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_wrap_object_with_fn_signal.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
export default component$((props) => {
	// not destructure it so it is a var prop
	const item = props.something.count;
	return (
		<>
			<div data-no-wrap={item ? item * 2 : null} data-wrap={props.myobj.id + "test"}></div>
		</>
	);
});

============================= should_wrap_object_with_fn_signal.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export default componentQrl(qrl(()=>import(`./should_wrap_object_with_fn_signal.tsx_component_m0d6HKr04bo.js`),`component_m0d6HKr04bo`));

None
============================= ./should_wrap_object_with_fn_signal.tsx_component_m0d6HKr04bo.js (ENTRY POINT)==

import{_jsxSorted}from"@qwik.dev/core";import{Fragment as _Fragment}from"@qwik.dev/core/jsx-runtime";export const component_m0d6HKr04bo=props=>{let item=props.something.count;return/* @__PURE__ */ _jsxSorted(_Fragment,null,null,/* @__PURE__ */ _jsxSorted(`div`,{data-wrap:props.myobj.id+`test`},{data-no-wrap:item?item*2:null},null,3,null),3,null)};

None
/*
{
  "origin": "should_wrap_object_with_fn_signal.tsx",
  "name": "component_m0d6HKr04bo",
  "entry": null,
  "displayName": "should_wrap_object_with_fn_signal.tsx_component",
  "hash": "m0d6HKr04bo",
  "canonicalFilename": "should_wrap_object_with_fn_signal.tsx_component_m0d6HKr04bo",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component_m0d6HKr04bo",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
