optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_wrap_store_expression.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export default component$(() => {
	const panelStore = useStore(() => ({
		active: 'Input',
		list: PANELS,
	}));

	return (
		<div
			stuff={panelStore.active ? 'yes' : 'no'}
			class={{
				'too-long-to-wrap': true,
				'examples-panel-input': panelStore.active === 'Input',
				'examples-panel-output': panelStore.active === 'Output',
				'examples-panel-console': panelStore.active === 'Console',
			}}
		/>
	);
});
export const PANELS: ActivePanel[] = ['Examples', 'Input', 'Output', 'Console'];

============================= should_wrap_store_expression.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export default componentQrl(qrl(()=>import(`./should_wrap_store_expression.tsx_component_TR0O8wI8W8c.js`),`component_TR0O8wI8W8c`));export const PANELS=componentQrl(qrl(()=>import(`./should_wrap_store_expression.tsx_component_TR0O8wI8W8c.js`),`component_TR0O8wI8W8c`));

None
============================= ./should_wrap_store_expression.tsx_component_TR0O8wI8W8c.js (ENTRY POINT)==

import{_jsxSorted,useStore}from"@qwik.dev/core";export const component_TR0O8wI8W8c=()=>{let panelStore=useStore(()=>({active:`Input`,list:PANELS}));return/* @__PURE__ */ _jsxSorted(`div`,{stuff:panelStore.active?`yes`:`no`,class:{"too-long-to-wrap":!0,"examples-panel-input":panelStore.active===`Input`,"examples-panel-output":panelStore.active===`Output`,"examples-panel-console":panelStore.active===`Console`}},null,null,3,null)};

None
/*
{
  "origin": "should_wrap_store_expression.tsx",
  "name": "component_TR0O8wI8W8c",
  "entry": null,
  "displayName": "should_wrap_store_expression.tsx_component",
  "hash": "TR0O8wI8W8c",
  "canonicalFilename": "should_wrap_store_expression.tsx_component_TR0O8wI8W8c",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component_TR0O8wI8W8c",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
